# pymidi-controller

./: .gitignore  Makefile  README.md  cli.py  config.py  midi_bindings.json  midi_devices.json  midi_run.py  pymidi.py  pyproject.toml  requirements.txt
actions/: elgato.py  elgato_discovery.py  hue.py  hue_discovery.py  hue_state.py  midi_utils.py
pymidi_controller/: cli.py  config.py  config_manager.py  core.py  state_manager.py
pymidi_controller/actions/: elgato_discovery.py  hue.py  hue_discovery.py
pymidi_controller/data/: default_config.yaml
pymidi_controller/utils/: color_cycle.py  midi_utils.py
user_settings/: color_cycles.json  midi_bindings.json
utils/: color_cycle.py  midi_utils.py
